--- a/Example/CanvasClock.html
+++ b/Example/CanvasClock.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Html5 Canvas 圆形时钟</title>
-    <style type="text/css">
-        #myCanvas{
-            display: block;
-            margin: 10px auto;
-     }
-    </style>
+<meta charset="UTF-8">
+<title>Html5 Canvas 圆形时钟</title>
+<style type="text/css">
+    #myCanvas{
+        display: block;
+        margin: 10px auto;
+    }
+</style>
 </head>
 
 <body>
@@ -17,20 +17,19 @@
     var myCanvas = document.getElementById('myCanvas');
     var c = myCanvas.getContext('2d');
     function clock(){
-        c.clearRect(0,0,400,400);
-        //		获取当前时间
+        c.clearRect(0,0,400,400);//	获取当前时间
         var data = new Date();
-        var sec =data.getSeconds();//获取秒
-        var min =data.getMinutes();//获取小时
-        var hour=data.getHours();//获取分钟
+        var sec = data.getSeconds();//获取秒
+        var min = data.getMinutes();//获取小时
+        var hour= data.getHours();//获取分钟
 
         c.save();//保存当前状态
         c.translate(200,200);//转换画布坐标系统
-        c.rotate(Math.PI/2);//确定旋转点的
+        c.rotate(-Math.PI/2);//确定旋转点的
         //分钟刻度线
         for(var i=0;i<60;i++){	//画12个刻度线
             c.beginPath();
-            c.strokeStyle = "#f00";
+            c.strokeStyle = "#0FF";
             c.lineWidth = 5 ;
             c.moveTo(117,0);
             c.lineTo(120,0);
@@ -41,7 +40,7 @@
         //时钟刻度线
         for(var i=0;i<12;i++){	//画12个刻度线
             c.beginPath();
-            c.strokeStyle = "#000";
+            c.strokeStyle = "#888";
             c.lineWidth = 8 ;
             c.moveTo(100,0);
             c.lineTo(120,0);
