--- a/VideoLearning/Study05/层叠性.html
+++ b/VideoLearning/Study05/层叠性.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		#box{
-			font-size: 40px;
+	    .box1{
+			font-size: 200px;
+			color: blue;
+		}
+		.box2{
+			font-size: 60px;
 			color: red;
-			background-color: green;
 		}
 	</style>
 </head>
 <body>
-	<div id="box">id选择器1</div>
-	<div>id选择器2</div>
-	<p>id选择器3</p>
-	<p>id选择器4</p>
+	<div class="box1 box2 ">层叠性</div>	
 </body>
 </html>
